Ensure now playing info images are not too large

--- a/MaterialSkin/HTML/material/html/css/style.css
+++ b/MaterialSkin/HTML/material/html/css/style.css
@@ -285,6 +285,14 @@ a {
     text-align: center;
 }
 
+.np-info-text img {
+    max-width: 300px !important;
+    max-height: 300px !important;
+    margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+
 .ellipsis {
     text-overflow:ellipsis; 
     overflow: hidden; 
